3703.	[func]		Prefetch about to expire records if they are queried
			for, see prefetch option for details. [RT #35041]

3702.	[func]		'dnssec-coverage -l' option specifies a length
			of time to check for coverage; events further into
			the future are ignored.  'dnssec-coverage -z'
			checks only ZSK events, and 'dnssec-coverage -k'
			checks only KSK events.  (Thanks to Peter Palfrader.)
			[RT #35168]

3701.	[func]		named-checkconf can now obscure shared secrets
			when printing by specifying '-x'. [RT #34465]

3700.	[func]		Allow access to subgroups of XML statistics via
			special URLs http://<server>:<port>/xml/v3/server,
			/zones, /net, /tasks, /mem, and /status.  [RT #35115]

3699.	[bug]		Improvements to statistics channel XSL stylesheet:
			the stylesheet can now be cached by the browser;
			section headers are omitted from the stats display
			when there is no data in those sections to be
			displayed; counters are now right-justified for
			easier readability. [RT #35117]

3698.	[cleanup]	Replaced all uses of memcpy() with memmove().
			[RT #35120]

3697.	[bug]		Handle "." as a search list element when IDN support
			is enabled. [RT #35133]

3696.	[bug]		dig failed to handle AXFR style IXFR responses which
			span multiple messages. [RT #35137]

3695.	[bug]		Address a possible race in dispatch.c. [RT #35107]

3694.	[bug]		Warn when a key-directory is configured for a zone,
			but does not exist or is not a directory. [RT #35108]

3693.	[security]	memcpy was incorrectly called with overlapping
			ranges resulting in malformed names being generated
			on some platforms.  This could cause INSIST failures
			when serving NSEC3 signed zones (CVE-2014-0591).
			[RT #35120]

3692.	[bug]		Two calls to dns_db_getoriginnode were fatal if there
			was no data at the node. [RT #35080]

3691.	[contrib]	Address null pointer dereference in LDAP and
			MySQL DLZ modules.

3690.	[bug]		Iterative responses could be missed when the source