@@ -1,104 +1,116 @@
 BIND 9
 
-        BIND version 9 is a major rewrite of nearly all aspects of the
-        underlying BIND architecture.  Some of the important features of
-        BIND 9 are:
+	BIND version 9 is a major rewrite of nearly all aspects of the
+	underlying BIND architecture.  Some of the important features of
+	BIND 9 are:
 
-                - DNS Security
-                        DNSSEC (signed zones)
-                        TSIG (signed DNS requests)
+		- DNS Security
+			DNSSEC (signed zones)
+			TSIG (signed DNS requests)
 
-                - IP version 6
-                        Answers DNS queries on IPv6 sockets
-                        IPv6 resource records (AAAA)
-                        Experimental IPv6 Resolver Library
+		- IP version 6
+			Answers DNS queries on IPv6 sockets
+			IPv6 resource records (AAAA)
+			Experimental IPv6 Resolver Library
 
-                - DNS Protocol Enhancements
-                        IXFR, DDNS, Notify, EDNS0
-                        Improved standards conformance
+		- DNS Protocol Enhancements
+			IXFR, DDNS, Notify, EDNS0
+			Improved standards conformance
 
-                - Views
-                        One server process can provide multiple "views" of
-                        the DNS namespace, e.g. an "inside" view to certain
-                        clients, and an "outside" view to others.
+		- Views
+			One server process can provide multiple "views" of
+			the DNS namespace, e.g. an "inside" view to certain
+			clients, and an "outside" view to others.
 
-                - Multiprocessor Support
+		- Multiprocessor Support
 
-                - Improved Portability Architecture
+		- Improved Portability Architecture
 
 
-        BIND version 9 development has been underwritten by the following
-        organizations:
+	BIND version 9 development has been underwritten by the following
+	organizations:
 
-                Sun Microsystems, Inc.
-                Hewlett Packard
-                Compaq Computer Corporation
-                IBM
-                Process Software Corporation
-                Silicon Graphics, Inc.
-                Network Associates, Inc.
-                U.S. Defense Information Systems Agency
-                USENIX Association
-                Stichting NLnet - NLnet Foundation
-                Nominum, Inc.
+		Sun Microsystems, Inc.
+		Hewlett Packard
+		Compaq Computer Corporation
+		IBM
+		Process Software Corporation
+		Silicon Graphics, Inc.
+		Network Associates, Inc.
+		U.S. Defense Information Systems Agency
+		USENIX Association
+		Stichting NLnet - NLnet Foundation
+		Nominum, Inc.
 
-        For a summary of functional enhancements in previous
-        releases, see the HISTORY file.
+	For a summary of functional enhancements in previous
+	releases, see the HISTORY file.
 
-        For a detailed list of user-visible changes from
-        previous releases, see the CHANGES file.
+	For a detailed list of user-visible changes from
+	previous releases, see the CHANGES file.
 
-        For up-to-date release notes and errata, see
-        http://www.isc.org/software/bind9/releasenotes
+	For up-to-date release notes and errata, see
+	http://www.isc.org/software/bind9/releasenotes
 
 BIND 9.10.0
 
-        BIND 9.10.0 includes a number of changes from BIND 9.9 and earlier
-        releases.  New features include:
+	BIND 9.10.0 includes a number of changes from BIND 9.9 and earlier
+	releases.  New features include:
 
-         - DNS Response-rate limiting (DNS RRL) blunts the impact of
-           reflection and amplification attacks.
-         - New zone file format "map" is an image of a zone database
-           that can be loaded directly into memory, allowing much faster
-           zone loading.
-         - Substantial improvement in response-policy zone (RPZ)
-           performance.  Up to 32 response-policy zones can be
-           configured with minimal performance loss.
-         - New RPZ client-IP triggers and drop policies.
-         - ACLs can now be specified based on geographic location
-           using the MaxMind GeoIP databases.
-         - New XML schema (version 3) for the statistics channel
-           includes many new statistics and uses a flattened XML tree
-           for faster parsing.
-         - A new stylesheet, based on the Google Charts API, displays
-           XML statistics in charts and graphs on javascript-enabled
-           browsers.
-         - The statistics channel can now provide data in JSON
-           format as well as XML.
-         - The internal and export versions of the BIND libraries
-           (libisc, libdns, etc) have been unified so that external
-           library clients can use the same libraries as BIND itself.
-         - New 'dnssec-coverage' tool to check DNSSEC key coverage
-           for a zone and report if a lapse in signing coverage has
-           been inadvertently scheduled.
-         - Signing algorithm flexibility and other improvements
-           for the "rndc" control channel.
-         - 'named-checkzone' and 'named-compilezone' can now read
-           journal files, allowing them to process dynamic zones.
-         - Multiple DLZ databases can now be configured.  Individual
-           zones can be configured to be served from a specific DLZ
-           database.  DLZ databases now serve zones of type "master"
-           and "redirect".
-         - "rndc zonestatus" reports information about a specified zone.
-         - "named" now listens on IPv6 as well as IPv4 interfaces
-           by default.
+	 - DNS Response-rate limiting (DNS RRL) blunts the impact of
+	   reflection and amplification attacks.
+	 - New zone file format "map" is an image of a zone database
+	   that can be loaded directly into memory, allowing much faster
+	   zone loading.
+	 - Substantial improvement in response-policy zone (RPZ)
+	   performance.  Up to 32 response-policy zones can be
+	   configured with minimal performance loss.
+	 - To improve recursive resolver performance, cache records
+	   which are still being requested by clients can now be
+	   automatically refreshed from the authoritative server
+	   before they expire, reducing or eliminating the time
+	   window in which no answer is available in the cache.
+	 - New RPZ client-IP triggers and drop policies.
+	 - ACLs can now be specified based on geographic location
+	   using the MaxMind GeoIP databases.
+	 - New XML schema (version 3) for the statistics channel
+	   includes many new statistics and uses a flattened XML tree
+	   for faster parsing.
+	 - A new stylesheet, based on the Google Charts API, displays
+	   XML statistics in charts and graphs on javascript-enabled
+	   browsers.
+	 - The statistics channel can now provide data in JSON
+	   format as well as XML.
+	 - The internal and export versions of the BIND libraries
+	   (libisc, libdns, etc) have been unified so that external
+	   library clients can use the same libraries as BIND itself.
+	 - New 'dnssec-coverage' tool to check DNSSEC key coverage
+	   for a zone and report if a lapse in signing coverage has
+	   been inadvertently scheduled.
+	 - Signing algorithm flexibility and other improvements
+	   for the "rndc" control channel.
+	 - 'named-checkzone' and 'named-compilezone' can now read
+	   journal files, allowing them to process dynamic zones.
+	 - Multiple DLZ databases can now be configured.  Individual
+	   zones can be configured to be served from a specific DLZ
+	   database.  DLZ databases now serve zones of type "master"
+	   and "redirect".
+	 - "rndc zonestatus" reports information about a specified zone.
+	 - "named" now listens on IPv6 as well as IPv4 interfaces
+	   by default.
 	 - "named" now preserves the capitalization of names when
-           responding to queries.
-         - New 'named-rrchecker' tool to verify the syntactic
-           correctness of individual resource records.
-         - When re-signing a zone, the new "dnssec-signzone -Q" option
-           drops signatures from keys that are still published but are
-           no longer active.
+	   responding to queries.
+	 - new "dnssec-importkey" command allows the use of offline
+	   DNSSEC keys with automatic DNSKEY management.
+	 - New 'named-rrchecker' tool to verify the syntactic
+	   correctness of individual resource records.
+	 - When re-signing a zone, the new "dnssec-signzone -Q" option
+	   drops signatures from keys that are still published but are
+	   no longer active.
+	 - "named-checkconf -px" will print the contents of configuration
+	   files with the shared secrets obscured, making it easier to
+	   share configuration (e.g. when submitting a bug report)
+	   without revealing private information.
+
 
 BIND 9.9.0
 
